# battle_city

./: CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: ShaderProgram.cpp.A4119E28893D9DDE.idx  ShaderProgram.h.1E1ED2A0E4826C76.idx  cocoa_init.m.98A25D7EE5E3B8D6.idx  cocoa_joystick.h.B038F81578482B02.idx  cocoa_joystick.m.D09E4DC9785D2584.idx  cocoa_monitor.m.2D5336ED0158205F.idx  cocoa_platform.h.E940A9D1BCB2356F.idx  cocoa_time.c.9FD082D0E6F2773A.idx  cocoa_time.h.4BD7A40858A1D55F.idx  cocoa_window.m.1100804BE9C78D63.idx  context.c.2E3FFFD17F350E83.idx  egl_context.c.93A04D1AF335674A.idx  glad.c.3DB1CC19C473B6B0.idx  glad.h.A1C820D3CA5A769A.idx  glfw3.h.2E7F59C088EF4C3D.idx  glfw3native.h.1207F70C4686C9EF.idx  init.c.9336E7C07F59719C.idx  input.c.DD78DDD01B6E9066.idx  internal.h.4A50239F07E9BCBD.idx  khrplatform.h.974775F0C39FC980.idx  main.cpp.FB8A3992519EF451.idx  mappings.h.69CD0E77547E36A5.idx  monitor.c.8277BCBE214C1F11.idx  nsgl_context.m.5E76DF486AA19275.idx  null_init.c.7BE7F9900AE42629.idx  null_joystick.c.F6EA3052282C41DC.idx  null_joystick.h.74175EE4597AC735.idx  null_monitor.c.3787A3CD0076C016.idx  null_platform.h.A934DF796551DA77.idx  null_window.c.35D424C719221AB8.idx  osmesa_context.c.74AD885140D36592.idx  platform.c.3B1BEE8F0F1D16CD.idx  platform.h.5F6D579CFF80A919.idx  posix_module.c.7D7AA73A62C38A6E.idx  posix_thread.c.42C0A20070C88B1A.idx  posix_thread.h.04B75AB21852CDED.idx  vulkan.c.3CB8B28B3F89FE87.idx  window.c.83B8BB509883D933.idx
src/: main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h
